--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "'com.example.androidkotlinseed.MockRunner"
+        // The following argument makes the Android Test Orchestrator run its
+        // "pm clear" command after each test invocation. This command ensures
+        // that the app's state is completely cleared between tests.
+        testInstrumentationRunnerArguments clearPackageData: 'true'
         multiDexEnabled true
     }
+
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
     buildTypes {
         debug {
             jniDebuggable true
