Added mock web server for android tests

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ allprojects {
         jcenter()
         mavenCentral()
     }
+
+    configurations.all {
+        resolutionStrategy {
+            force("org.objenesis:objenesis:2.6")
+        }
+    }
 }
 
 task clean(type: Delete) {
