--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "'com.example.androidkotlinseed.MockRunner"
+        testInstrumentationRunner "com.example.androidkotlinseed.MockRunner"
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
         // that the app's state is completely cleared between tests.
@@ -22,9 +22,9 @@ android {
         multiDexEnabled true
     }
 
-    testOptions {
-        execution 'ANDROIDX_TEST_ORCHESTRATOR'
-    }
+//    testOptions {
+//        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+//    }
 
     buildTypes {
         debug {
@@ -66,6 +66,11 @@ android {
     dataBinding {
         enabled = true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -101,8 +106,8 @@ dependencies {
 
     // OkHttp
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.12.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.2'
 
     // Room
     def room_version = "2.1.0"
@@ -131,16 +136,15 @@ dependencies {
     kaptTest 'com.google.dagger:dagger-compiler:2.16'
     kaptTest 'com.google.dagger:dagger-android-processor:2.16'
 
-
+    // UX test dependencies
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'org.powermock:powermock-core:2.0.2'
-    androidTestImplementation 'org.powermock:powermock-module-junit4:2.0.2'
-    androidTestImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.16'
     kaptAndroidTest 'com.google.dagger:dagger-android-processor:2.16'
 }
