--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.activities.HeroesListActivity">
+        <activity android:name=".view.activities.HeroesListActivityMvc">
         </activity>
 
         <provider
