--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.example.androidkotlinseed"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.example.androidkotlinseed.MockRunner"
@@ -38,28 +38,30 @@ android {
         }
     }
 
-    flavorDimensions "environment", "source"
+    flavorDimensions "environment"
     productFlavors {
+        def dataWebService = "\"WS\""
+        def dataMock = "\"MOCK\""
+
         pre {
             dimension "environment"
             manifestPlaceholders = [usesCleartextTraffic: "true"]
+            buildConfigField "String", "DATA_SOURCE", dataWebService
             buildConfigField "String", "API_BASE_URL", "\"https://api.myjson.com\""
         }
 
         pro {
             dimension "environment"
             manifestPlaceholders = [usesCleartextTraffic: "false"]
+            buildConfigField "String", "DATA_SOURCE", dataWebService
             buildConfigField "String", "API_BASE_URL", "\"https://api.myjson.com\""
         }
 
-        dataWS {
-            dimension = "source"
-            buildConfigField "String", "DATA_SOURCE", "\"WS\""
-        }
-
-        dataMock {
-            dimension = "source"
-            buildConfigField "String", "DATA_SOURCE", "\"MOCK\""
+        mock {
+            dimension "environment"
+            manifestPlaceholders = [usesCleartextTraffic: "true"]
+            buildConfigField "String", "DATA_SOURCE", dataMock
+            buildConfigField "String", "API_BASE_URL", "\"http://localhost:8080\""
         }
     }
 
@@ -91,8 +93,7 @@ dependencies {
     def lifecycle_version = "2.1.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.16'
@@ -111,14 +112,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.2'
 
     // Room
-    def room_version = "2.1.0"
+    def room_version = "2.2.1"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -131,6 +132,9 @@ dependencies {
 
     //Easy Permissions
     implementation 'pub.devrel:easypermissions:1.2.0'
+
+    //Mock web server
+    implementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
 
     // Unit test dependencies
     testImplementation 'junit:junit:4.12'
