--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
             manifestPlaceholders = [usesCleartextTraffic: "true"]
             buildConfigField "String", "DATA_SOURCE", dataMock
             buildConfigField "String", "API_BASE_URL", "\"http://localhost:8080\""
-            applicationIdSuffix ".pro"
+            applicationIdSuffix ".mock"
         }
     }
 
@@ -114,7 +114,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.2'
 
     // Room
-    def room_version = "2.2.2"
+    def room_version = "2.2.3"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
