--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,6 @@ android {
         multiDexEnabled true
     }
 
-//    testOptions {
-//        execution 'ANDROIDX_TEST_ORCHESTRATOR'
-//    }
-
     buildTypes {
         debug {
             jniDebuggable true
@@ -70,7 +66,11 @@ android {
     sourceSets {
         mock.java.srcDirs "src/main/java", "src/mock/java"
         pre.java.srcDirs "src/main/java", "src/ws/java"
+        pre.manifest.srcFile "src/ws/AndroidManifest.xml"
+        pre.res.srcDirs "src/main/res", "src/ws/res"
         pro.java.srcDirs "src/main/java", "src/ws/java"
+        pro.manifest.srcFile "src/ws/AndroidManifest.xml"
+        pre.res.srcDirs "src/main/res", "src/ws/res"
     }
 
     dataBinding {
@@ -90,15 +90,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Viewmodel
-    def lifecycle_version = "2.1.0"
+    def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
@@ -144,13 +144,16 @@ dependencies {
     //Mock web server
     implementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
 
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
     // Unit test dependencies
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation 'org.powermock:powermock-core:2.0.2'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
-    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
     testImplementation "com.google.truth:truth:0.36"
     kaptTest 'com.google.dagger:dagger-compiler:2.16'
