--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.example.androidkotlinseed"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.example.androidkotlinseed.MockRunner"
@@ -115,9 +115,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     // OkHttp
-    implementation 'com.squareup.okhttp:okhttp:2.7.5'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.2'
+    // define a BOM and its version
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+
+    // define any required OkHttp artifacts without version
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
 
     // Room
     def room_version = "2.2.6"
@@ -142,19 +145,19 @@ dependencies {
     implementation 'pub.devrel:easypermissions:3.0.0'
 
     //Mock web server
-    implementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
+    implementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
 
     // EventBus
     implementation 'org.greenrobot:eventbus:3.2.0'
 
     // Unit test dependencies
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation 'org.powermock:powermock-core:2.0.2'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     testImplementation "com.google.truth:truth:0.36"
     kaptTest 'com.google.dagger:dagger-compiler:2.16'
     kaptTest 'com.google.dagger:dagger-android-processor:2.16'
@@ -166,7 +169,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.14.2'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.16'
     kaptAndroidTest 'com.google.dagger:dagger-android-processor:2.16'
