--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,8 +172,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     testImplementation "com.google.truth:truth:0.36"
-    kaptTest 'com.google.dagger:dagger-compiler:2.28'
-    kaptTest 'com.google.dagger:dagger-android-processor:2.16'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
     // UX test dependencies
     androidTestImplementation 'androidx.test:runner:1.3.0'
@@ -184,6 +184,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.28'
-    kaptAndroidTest 'com.google.dagger:dagger-android-processor:2.16'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 }
